Fixed z-index issues

--- a/client/assets/stylesheets/style.css
+++ b/client/assets/stylesheets/style.css
@@ -461,7 +461,7 @@ background-color: rgba( 233, 233, 233, 1) !important;
 /****** New Note ******/
 
 .new-note-header {
-  z-index: 9999999999999999999999999999999999999999999999999999999999999999999999999999;
+  z-index: 199 !important;
   background-color: rgba( 28, 136, 200, 1);
   height: 56px;
   font-size: 56px;
@@ -1162,6 +1162,7 @@ background-color: rgba( 233, 233, 233, 1) !important;
 
   .navbar-fixed-top {
     margin-top: -13px !important;
+
   }
 
 }
@@ -1181,7 +1182,7 @@ background-color: rgba( 233, 233, 233, 1) !important;
   outline : none;
   padding-top: 10px;
   padding-bottom: 0px;
-  z-index: 999 !important;
+  z-index: 100 !important;
 }
 
 .navbar-fixed-bottom {
